# django-singlestore

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  DEVELOPMENT.md  LICENSE  README.md  releasing.md  setup.cfg
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml  publish.yml  test_all_versions.yml  tests.yml
django_singlestore/: __init__.py  base.py  client.py  compiler.py  creation.py  features.py  functions.py  introspection.py  operations.py  schema.py  utils.py  validation.py
scripts/: get_test_matrix.py  local_test.sample  local_test.sh  run_all_tests.sh  run_group.py  run_module.py  run_tests_parallel.py  setup.sql  setup_group.py  singlestore_settings.py  split.py
scripts/setup_sections/: admin_docs_setup.sql  admin_filters_setup.sql  aggregation_regress_setup.sql  aggregation_setup.sql  annotations_setup.sql  async_setup.sql  backends_setup.sql  bulk_create_setup.sql  contenttypes_tests_setup.sql  custom_columns_setup.sql  dates_setup.sql  datetimes_setup.sql  db_functions_setup.sql  defer_regress_setup.sql  delete_regress_setup.sql  delete_setup.sql  filtered_relation_setup.sql  fixtures_setup.sql  generic_relations_regress_setup.sql  generic_views_setup.sql  get_object_or_404_setup.sql  get_or_create_setup.sql  initial_setup_setup.sql  lookup_setup.sql  m2m_and_m2o_setup.sql  m2m_multiple_setup.sql  managers_regress_setup.sql  many_to_many_setup.sql  migrations_setup.sql  model_fields_setup.sql  model_forms_setup.sql  model_formsets_setup.sql  model_inheritance_setup.sql  model_package_setup.sql  multiple_database_setup.sql  one_to_one_setup.sql  queries_setup.sql  queryset_pickle_setup.sql  raw_query_setup.sql  select_related_setup.sql  (+5 more)
scripts/utils/: model_transformer.py
