[metadata]
name = django-singlestore
version = attr: django_singlestore.__version__
url = https://github.com/memsql/django-singlestore
maintainer = SingleStore Inc.
maintainer_email = support@singlestore.com
license = BSD-3-Clause
license_files = LICENSE
description = Django backend for SingleStore
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - alpha
    Framework :: Django
    Framework :: Django :: 4.2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://github.com/memsql/django-singlestore
    Tracker = https://github.com/memsql/django-singlestore/issues

[options]
python_requires = >=3.9
packages = find:
install_requires =
    singlestoredb >= 1.12.4
    django >= 4.2

[flake8]
max-line-length = 120
