[metadata]
name = django_singlestore
version = attr: django_singlestore.__version__
description = Django backend for SingleStore
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/memsql/django-singlestore
maintainer = SingleStore Inc.
maintainer_email = support@singlestore.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source = https://github.com/memsql/django-singlestore
    Tracker = https://github.com/memsql/django-singlestore/issues

[options]
packages = find:
install_requires =
    django>=4.2
    singlestoredb>=1.12.4
python_requires = >=3.9

[flake8]
max-line-length = 120
